syntax = "proto2";

package basic;

message TestMessage {
  optional int32 optional_int32 =        1;
  optional int64 optional_int64 =       2;
  optional uint32 optional_uint32 =        3;
  optional uint64 optional_uint64 =        4;
  optional bool optional_bool =            5;
  optional float optional_float =          6;
  optional double optional_double =        7;
  optional string optional_string =        8;
  optional bytes optional_bytes =          9;

  optional TestMessage2 optional_msg =          10;
  optional TestEnum optional_enum =            11;
  /*

      repeated :repeated_int32,  :int32,        12
      repeated :repeated_int64,  :int64,        13
      repeated :repeated_uint32, :uint32,       14
      repeated :repeated_uint64, :uint64,       15
      repeated :repeated_bool,   :bool,         16
      repeated :repeated_float,  :float,        17
      repeated :repeated_double, :double,       18
      repeated :repeated_string, :string,       19
      repeated :repeated_bytes,  :bytes,        20
      repeated :repeated_msg,    :message,      21, "TestMessage2"
      repeated :repeated_enum,   :enum,         22, "TestEnum"
      */
}

message TestMessage2 {
  optional int32 foo = 1;
}

enum TestEnum {
  Default = 0;
  A = 1;
  B = 2;
  C = 3;
}
